--- a/Resnet_iteration_2.ipynb
+++ b/Resnet_iteration_2.ipynb
@@ -1496,6 +1496,69 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "47bRsmMzWL0M",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.save('Capstone_Image_Classifier.h5')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w_R45XAfWW1h",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip install coremltools"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LEfovBStWZbk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras.models import load_model  \n",
+        "import coremltools\n",
+        "\n",
+        "model = load_model('Capstone_Image_Classifier.h5')\n",
+        "coreml_model = coremltools.converters.keras.convert(model,\n",
+        "\tinput_names=\"image\",\n",
+        "\timage_input_names=\"image\",\n",
+        "\timage_scale=1/255.0,\n",
+        "\tclass_labels=mynewlist)\n",
+        "\n",
+        "coreml_model.save('Capstone_Image_Classifier.mlmodel')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NDX03psmWwYb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab import files\n",
+        "files.download('Capstone_Image_Classifier.mlmodel')"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
