--- a/Resnet_iteration_2.ipynb
+++ b/Resnet_iteration_2.ipynb
@@ -107,7 +107,7 @@
         }
       },
       "source": [
-        "train = pd.read_csv('/content/drive/My Drive/cameras.csv')    # reading the csv file\n",
+        "train = pd.read_csv('/content/drive/My Drive/BestBuyVisionProducts.csv')    # reading the csv file\n",
         "train.head()      # printing first five rows of the file"
       ],
       "execution_count": 0,
