Fixed Minor Changes

--- a/Resnet_iteration_2.ipynb
+++ b/Resnet_iteration_2.ipynb
@@ -31,10 +31,10 @@
       "metadata": {
         "id": "cD0lyak5Yq9p",
         "colab_type": "code",
-        "outputId": "e33c4568-5b7d-4ee8-a9b0-2ac73bd1ac29",
+        "outputId": "c4808443-48d4-4532-a01e-39e6b5008962",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
@@ -54,7 +54,7 @@
         "import pandas as pd\n",
         "import os"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -70,17 +70,17 @@
       "metadata": {
         "id": "BsGjqCpdYtIK",
         "colab_type": "code",
-        "outputId": "8c27bb3d-9e54-4217-9fa9-f461a09253f2",
+        "outputId": "0d163cc0-9519-4828-b433-015c57f0d033",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 124
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,17 +100,17 @@
       "metadata": {
         "id": "yWtpHuKoY3wa",
         "colab_type": "code",
-        "outputId": "665b09d9-6527-4559-c560-7ff0b3d9eabf",
+        "outputId": "120c8708-6673-4870-ec37-ed22a7ba3b2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 202
         }
       },
       "source": [
         "train = pd.read_csv('/content/drive/My Drive/BestBuyVisionProducts.csv')    # reading the csv file\n",
         "train.head()      # printing first five rows of the file"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,27 +141,27 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>Panasonic - DMC-FZ1000 20.1-Megapixel Digital ...</td>\n",
+              "      <td>Apple - iPhone XS with 64GB Memory Cell Phone ...</td>\n",
               "      <td>https://pisces.bbystatic.com/image2/BestBuy_US...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>Sony - Alpha a7 II Full-Frame Mirrorless Video...</td>\n",
+              "      <td>Apple - iPhone 11 Pro with 64GB Memory Cell Ph...</td>\n",
               "      <td>https://pisces.bbystatic.com/image2/BestBuy_US...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>Sony - Alpha a7 II Full-Frame Mirrorless Video...</td>\n",
+              "      <td>Apple - iPhone 11 with 64GB Memory Cell Phone ...</td>\n",
               "      <td>https://pisces.bbystatic.com/image2/BestBuy_US...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>Sony - Alpha A6000 Mirrorless Camera (Body Onl...</td>\n",
+              "      <td>Samsung - Galaxy S8 64GB (Unlocked) - Midnight...</td>\n",
               "      <td>https://pisces.bbystatic.com/image2/BestBuy_US...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>Sony - DSC-W830 20.1-Megapixel Digital Camera ...</td>\n",
+              "      <td>Samsung - Galaxy S9 64GB (Unlocked) - Midnight...</td>\n",
               "      <td>https://pisces.bbystatic.com/image2/BestBuy_US...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -170,11 +170,11 @@
             ],
             "text/plain": [
               "                                          Label Name                                              Links\n",
-              "0  Panasonic - DMC-FZ1000 20.1-Megapixel Digital ...  https://pisces.bbystatic.com/image2/BestBuy_US...\n",
-              "1  Sony - Alpha a7 II Full-Frame Mirrorless Video...  https://pisces.bbystatic.com/image2/BestBuy_US...\n",
-              "2  Sony - Alpha a7 II Full-Frame Mirrorless Video...  https://pisces.bbystatic.com/image2/BestBuy_US...\n",
-              "3  Sony - Alpha A6000 Mirrorless Camera (Body Onl...  https://pisces.bbystatic.com/image2/BestBuy_US...\n",
-              "4  Sony - DSC-W830 20.1-Megapixel Digital Camera ...  https://pisces.bbystatic.com/image2/BestBuy_US..."
+              "0  Apple - iPhone XS with 64GB Memory Cell Phone ...  https://pisces.bbystatic.com/image2/BestBuy_US...\n",
+              "1  Apple - iPhone 11 Pro with 64GB Memory Cell Ph...  https://pisces.bbystatic.com/image2/BestBuy_US...\n",
+              "2  Apple - iPhone 11 with 64GB Memory Cell Phone ...  https://pisces.bbystatic.com/image2/BestBuy_US...\n",
+              "3  Samsung - Galaxy S8 64GB (Unlocked) - Midnight...  https://pisces.bbystatic.com/image2/BestBuy_US...\n",
+              "4  Samsung - Galaxy S9 64GB (Unlocked) - Midnight...  https://pisces.bbystatic.com/image2/BestBuy_US..."
             ]
           },
           "metadata": {
@@ -237,8 +237,8 @@
       },
       "source": [
         "from numpy import savetxt\n",
-        "np.save('/content/drive/My Drive/X_numpy_DigitalCameras.csv', X)\n",
-        "np.save('/content/drive/My Drive/Y_numpy_DigitalCameras.csv', y)"
+        "#np.save('/content/drive/My Drive/X_numpy_DigitalCameras.csv', X)\n",
+        "#np.save('/content/drive/My Drive/Y_numpy_DigitalCameras.csv', y)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -251,8 +251,8 @@
         "colab": {}
       },
       "source": [
-        "y = np.load('/content/drive/My Drive/Y_numpy_DigitalCameras.csv.npy')\n",
-        "X = np.load('/content/drive/My Drive/X_numpy_DigitalCameras.csv.npy')"
+        "#y = np.load('/content/drive/My Drive/Y_numpy_DigitalCameras.csv.npy')\n",
+        "#X = np.load('/content/drive/My Drive/X_numpy_DigitalCameras.csv.npy')"
       ],
       "execution_count": 0,
       "outputs": []
